--- a/package.json
+++ b/package.json
@@ -27,24 +27,28 @@
     "@panter/manul-files": "^0.0.3",
     "@panter/manul-i18n": "^0.4.2",
     "@panter/manul-router": "^0.2.3",
+    "antd": "^2.8.0",
     "bcrypt": "^0.8.7",
     "blueimp-canvas-to-blob": "^3.6.0",
+    "griddle-react": "^0.5.1",
     "lodash": "^4.17.4",
     "mantra-core": "^1.2.0",
     "mime-types": "^2.1.14",
     "moment": "^2.17.1",
-    "react": "15.4.2",
+    "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.1",
-    "react-dom": "15.4.2",
+    "react-dom": "^15.4.2",
     "react-komposer": "^1.3.0",
+    "react-masonry-component": "^5.0.3",
     "react-mounter": "^1.0.0",
     "react-overlays": "^0.6.11",
     "react-rectangle": "^1.3.3",
     "react-simple-di": "^1.0.1",
     "recompose": "^0.21.2",
-    "simpl-schema": "^0.2.2",
+    "simpl-schema": "^0.2.3",
     "styled-components": "^1.4.3",
-    "uniforms": "^1.12.1"
+    "uniforms": "^1.14.0",
+    "uniforms-antd": "^1.14.0"
   },
   "devDependencies": {
     "@kadira/storybook": "~2.35.3",
