--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
   "presets": ["es2015", "stage-2", "react"],
-  "plugins": ["react-require", "babel-root-slash-import"]
+  "plugins": [
+    ["lodash", { "id": ["lodash", "recompose"] }],
+    "react-require",
+    "babel-root-slash-import",
+    "array-includes",
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "add-react-displayname",
+    "styled-components-named"
+  ]
 }
