--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@panter/manul-admin": "^0.3.2",
+    "@panter/manul-admin": "/Users/macrozone/git/panter/npm/manul-admin",
     "@panter/manul-alerts": "^0.1.1",
     "@panter/manul-files": "^0.0.3",
     "@panter/manul-i18n": "^0.4.2",
@@ -38,6 +38,7 @@
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.12.2",
     "react-komposer": "^1.3.0",
     "react-masonry-component": "^5.0.3",
     "react-mounter": "^1.0.0",
@@ -57,7 +58,10 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-styled-components-named": "^0.1.1",
+    "babel-plugin-add-react-displayname": "0.0.4",
     "babel-plugin-array-includes": "^2.0.3",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "2.x.x",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
