--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "chimp": "chimp .config/chimp.js --mocha --ddp=http://localhost:3000 --path=tests",
     "ci": ".scripts/chimp.js",
     "test-storybook": "NODE_ENV=test storyshots",
-    "update-storybook-tests": "yarn test-storybook -- -u",
+    "update-storyshots": "yarn test-storybook -- -u",
     "cordova-icon": "meteor-cordova-icon",
     "cordova-splash": "meteor-cordova-splash"
   },
@@ -24,11 +24,10 @@
   "dependencies": {
     "@panter/manul-admin": "^0.7.2",
     "@panter/manul-alerts": "^0.1.1",
+    "@panter/manul-draft": "^0.0.8",
     "@panter/manul-files": "0.0.3",
-    "@panter/manul-i18n": "^0.4.2",
+    "@panter/manul-i18n": "^0.4.12",
     "@panter/manul-router": "^0.2.3",
-    "antd": "^2.10.0",
-    "bcrypt": "^0.8.7",
     "blueimp-canvas-to-blob": "^3.6.0",
     "bootstrap": "^4.0.0-alpha.6",
     "griddle-react": "^0.5.1",
@@ -40,6 +39,7 @@
     "rc-progress": "^2.1.1",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.1",
     "react-komposer": "^1.3.0",
@@ -49,6 +49,7 @@
     "react-overlays": "^0.6.12",
     "react-rectangle": "^1.3.3",
     "react-simple-di": "^1.0.1",
+    "react-window-dimensions": "^1.0.1",
     "recompose": "^0.21.2",
     "simpl-schema": "^0.2.3",
     "styled-components": "^2.1.0",
