add reorder and delete

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,7 +40,6 @@
     "react/prop-types": 0,
     "react/forbid-prop-types": 0,
     "react/display-name": 0,
-    "max-len": ["error", 250],
     "global-require": 0,
     "consistent-return": 0,
     "new-cap": 0,
@@ -49,6 +48,7 @@
     "import/no-extraneous-dependencies": 0,
     "import/extensions": 0,
     "import/imports-first": 0,
+    "max-len": [0, 80],
     "no-underscore-dangle": 0,
     "no-nested-ternary": 0,
     "prefer-arrow-callback": 0,
