--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rc-progress": "^2.1.1",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.1",
+    "react-beautiful-dnd": "^2.5.0",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.1",
