--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "formfreier",
   "scripts": {
     "lint": "eslint --cache ./imports ./client ./server --ext=jsx --ext=js",
-    "lint-fix": "eslint --cache ./imports ./client ./server --ext=jsx --ext=js --fix",
+    "lint-fix":
+      "eslint --cache ./imports ./client ./server --ext=jsx --ext=js --fix",
     "precommit": "yarn lint && yarn test-storybook",
     "storybook": "start-storybook -p 9001 -s ./public",
-    "chimp-watch": "chimp .config/chimp.js --mocha --ddp=http://localhost:3000 --watch --path=tests",
-    "chimp": "chimp .config/chimp.js --mocha --ddp=http://localhost:3000 --path=tests",
+    "chimp-watch":
+      "chimp .config/chimp.js --mocha --ddp=http://localhost:3000 --watch --path=tests",
+    "chimp":
+      "chimp .config/chimp.js --mocha --ddp=http://localhost:3000 --path=tests",
     "ci": ".scripts/chimp.js",
     "test-storybook": "NODE_ENV=test storyshots",
     "update-storyshots": "yarn test-storybook -- -u",
@@ -35,7 +38,8 @@
     "mantra-core": "^1.2.0",
     "mime-types": "^2.1.14",
     "moment": "^2.17.1",
-    "node-message-box": "https://github.com/nuxlli/node-message-box.git#7ee2400fec6a7ceae004d2bc7aa98ec8f27a95a1",
+    "node-message-box":
+      "https://github.com/nuxlli/node-message-box.git#7ee2400fec6a7ceae004d2bc7aa98ec8f27a95a1",
     "rc-progress": "^2.1.1",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.1",
@@ -53,7 +57,7 @@
     "react-window-dimensions": "^1.0.1",
     "recompose": "^0.21.2",
     "simpl-schema": "^0.2.3",
-    "styled-components": "^2.1.0",
+    "styled-components": "^2.2.3",
     "styled-components-breakpoint": "^1.0.1",
     "uniforms": "^1.19.1",
     "uniforms-bootstrap4": "^1.19.1"
@@ -70,7 +74,7 @@
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-require": "2.x.x",
-    "babel-plugin-styled-components-named": "^0.1.1",
+    "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "6.x.x",
